--- a/res/layout/fragment_main.xml
+++ b/res/layout/fragment_main.xml
@@ -77,7 +77,9 @@
         android:layout_gravity="center"
         android:layout_marginTop="30dp"
         android:text="@string/ingresar"
-        android:onClick="ingresarDatosIniciales" />
+        android:onClick="ingresarDatosIniciales"
+        android:background="@color/blue01"
+        android:textColor="#ffffff"/>
 
     <Button
         android:id="@+id/btnBorrarBaseDatos"
@@ -86,6 +88,8 @@
         android:layout_gravity="center"
         android:layout_marginTop="10dp"
         android:text="@string/borrar_base_de_datos"
-        android:onClick="borrarBaseDatos" />
+        android:onClick="borrarBaseDatos"
+        android:background="@color/red01"
+        android:textColor="#ffffff" />
 
 </LinearLayout>
