--- a/res/layout/fragment_promedio_default.xml
+++ b/res/layout/fragment_promedio_default.xml
@@ -271,7 +271,9 @@
             android:layout_height="wrap_content"
             android:text="@string/calcular"
             android:onClick="calcularPromedioAcumuladoPorDefecto"
-            android:layout_weight="1" />
+            android:layout_weight="1"
+            android:background="@color/green01"
+        	android:textColor="#ffffff" />
 
     </TableRow>
 
